--- a/src/autorest-interactive/index.html
+++ b/src/autorest-interactive/index.html
@@ -1,91 +1,21 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AutoRest Interactive</title>
     <script>
         var exports = {};
     </script>
-    <script src="index.js"></script>
-    <style>
-        * {
-            box-sizing: border-box;
-            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        }
-
-        body {
-            padding: 0;
-            margin: 0;
-        }
-
-        #overlays>div {
-            position: fixed;
-            width: 100%;
-            bottom: 0;
-            left: 0;
-            top: 80px;
-            padding: 20px;
-            overflow-y: scroll;
-            overflow-x: auto;
-            background: white;
-            opacity: 0.95;
-        }
-
-        #overlays>div>h1 {
-            z-index: 10;
-            position: fixed;
-            padding: 20px;
-            margin: 0;
-            left: 0;
-            top: 0;
-            width: 100%;
-            background: white;
-            white-space: nowrap;
-        }
-
-        #overlays>div>h1>button {
-            width: 30px;
-            height: 30px;
-            margin-right: 20px;
-            vertical-align: bottom;
-        }
-
-        #overlays>div>div {}
-
-        #overlays>div>div>table {
-            white-space: nowrap;
-        }
-
-        svg {
-            font-size: 1px;
-            font-family: monospace;
-        }
-
-        #pipelineGraph {
-            width: 100%;
-            height: 100%;
-        }
-
-        .scalable:hover {
-            transform: scale(2);
-            cursor: pointer;
-        }
-
-        line.edge {
-            stroke: #CCC;
-        }
-
-        textarea {
-            width: 100%;
-            height: 100%;
-            font-family: 'Inconsolata', 'Consolas', 'Courier New', Courier, monospace;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <button onclick="openInCode()" />Open All outputs in VSCode</button>
+    <button onclick="openInCode()">Open All outputs in VSCode</button>
     <svg id="pipelineGraph"></svg>
     <div id="overlays"></div>
+    <script src="index.js"></script>
 </body>
 
 </html>
